# tracelens

./: .env.example  .gitignore  LICENSE  PROJECT.md  README.md  README_en.md  pyproject.toml
tests/unit/: test_analyze_route.py  test_api.py  test_artifact_store.py  test_chain.py  test_cli.py  test_cli_analyze.py  test_deep_pipeline.py  test_deep_skills.py  test_evidence.py  test_focused_process.py  test_followup.py  test_followup_route.py  test_llm.py  test_mcp.py  test_normalizer.py  test_orchestrator.py  test_orchestrator_real_skills.py  test_planner.py  test_role_identifier.py  test_skill_abnormal_windows.py  test_skill_blocking_chain.py  test_skill_dependency_summary.py  test_skill_frame_rhythm.py  test_skill_long_task.py  test_skill_process_thread_discovery.py  test_skill_scheduling_delay.py  test_skill_thread_state_distribution.py  test_synthesis.py  test_trace_integration.py  test_trace_processor.py  test_types.py  test_verifier.py  test_web_index.py  test_window_detector.py  test_yaml_skills.py
tracelens/: config.py  main.py  types.py
tracelens/agent/: followup.py  orchestrator.py  planner.py  synthesis.py  verifier.py
tracelens/analysis/: chain.py  evidence.py  interpreter.py  window_detector.py
tracelens/app/: api.py
tracelens/artifacts/: models.py  store.py
tracelens/llm/: __init__.py  anthropic_client.py  factory.py  openai_client.py
tracelens/mcp/: __init__.py  __main__.py
tracelens/output/: cli_renderer.py  web_view_model.py
tracelens/semantics/: role_identifier.py  vocabulary.py
tracelens/skills/: abnormal_windows.py  base.py  (+8 more)
(+24 files in other folders)
