[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelens"
version = "0.1.0"
description = "TraceLens MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136.0",
  "jinja2>=3.1.6",
  "perfetto>=0.16.0",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0",
  "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
]
llm = [
  "anthropic>=0.42.0",
  "openai>=1.58.0",
]

[project.scripts]
tracelens = "tracelens.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
